Add image data exploration section

--- a/script.ipynb
+++ b/script.ipynb
@@ -102,7 +102,119 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Menampilkan sebuah **data** (matrix) sebagai sebuah gambar."
+    "## Image Data Exploration"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Melihat isi dari data (matrix)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[ 86,  93,  39],\n",
+       "        [ 86,  94,  37],\n",
+       "        [ 87,  90,  35],\n",
+       "        ...,\n",
+       "        [ 48,  41,  15],\n",
+       "        [ 46,  39,  11],\n",
+       "        [ 59,  52,  23]],\n",
+       "\n",
+       "       [[ 77,  84,  30],\n",
+       "        [ 77,  84,  30],\n",
+       "        [ 78,  83,  27],\n",
+       "        ...,\n",
+       "        [ 46,  38,  15],\n",
+       "        [ 64,  57,  29],\n",
+       "        [ 37,  30,   1]],\n",
+       "\n",
+       "       [[ 64,  73,  20],\n",
+       "        [ 66,  73,  19],\n",
+       "        [ 68,  73,  17],\n",
+       "        ...,\n",
+       "        [ 56,  48,  27],\n",
+       "        [ 46,  36,  11],\n",
+       "        [ 70,  60,  33]],\n",
+       "\n",
+       "       ...,\n",
+       "\n",
+       "       [[165, 150, 107],\n",
+       "        [159, 144, 101],\n",
+       "        [151, 134,  91],\n",
+       "        ...,\n",
+       "        [150, 138,  86],\n",
+       "        [149, 137,  85],\n",
+       "        [145, 134,  80]],\n",
+       "\n",
+       "       [[164, 149, 108],\n",
+       "        [157, 142, 101],\n",
+       "        [149, 131,  91],\n",
+       "        ...,\n",
+       "        [155, 143,  93],\n",
+       "        [153, 141,  91],\n",
+       "        [148, 136,  84]],\n",
+       "\n",
+       "       [[164, 149, 108],\n",
+       "        [157, 142, 101],\n",
+       "        [148, 130,  90],\n",
+       "        ...,\n",
+       "        [160, 148, 100],\n",
+       "        [157, 145,  95],\n",
+       "        [150, 138,  88]]], dtype=uint8)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "image"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(438, 780, 3)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "image.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Dari bentuk (438, 780, 3) ini dapat diketahui bahwa data ini berupa gambar **RGB** dengan ukuran **438 x 780 pixels**, dimana:\n",
+    "- 480 menandakan pixel horizontal.\n",
+    "- 780 menandakan pixel vertical.\n",
+    "- 3 menandakan channel (Red, Green, Blue)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Melihat data dalam bentuk gambar."
    ]
   },
   {
