Fix data preprocessing documentation

--- a/script.ipynb
+++ b/script.ipynb
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -171,7 +171,7 @@
        "        [150, 138,  88]]], dtype=uint8)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -204,7 +204,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Dari bentuk (438, 780, 3) ini dapat diketahui bahwa data ini berupa gambar **RGB** dengan ukuran **438 x 780 pixels**, dimana:\n",
+    "Dari bentuk (438, 780, 3) ini dapat diketahui bahwa data ini adalah array 3-D yang berupa gambar **RGB** dengan ukuran **438 x 780 pixels**, dimana:\n",
     "- 480 menandakan pixel vertical.\n",
     "- 780 menandakan pixel horizontal.\n",
     "- 3 menandakan channel (Red, Green, Blue)."
@@ -219,16 +219,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x27c7f0a12b0>"
+       "<matplotlib.image.AxesImage at 0x267fa3df700>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -272,13 +272,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "Red = image[:,:,0] # Channel berindex 0 adalah merah\n",
-    "Green = image[:,:,1] # Channel berindex 1 adalah hijau\n",
-    "Blue = image[:,:,2] # Channel berindex 2 adalah biru"
+    "Red = image[:,:,0]\n",
+    "Green = image[:,:,1]\n",
+    "Blue = image[:,:,2]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Channel berindex **0** adalah matrix yang nilainya merepresentasikan warna **merah** ![#f03c15](https://via.placeholder.com/15/f03c15/000000?text=+)\n",
+    "- Channel berindex **1** adalah matrix yang nilainya merepresentasikan warna **hijau** ![#c5f015](https://via.placeholder.com/15/c5f015/000000?text=+)\n",
+    "- Channel berindex **2** adalah matrix yang nilainya merepresentasikan warna **biru** ![#1589F0](https://via.placeholder.com/15/1589F0/000000?text=+)"
    ]
   },
   {
@@ -290,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -299,7 +308,7 @@
        "Text(0.5, 1.0, 'Gambar Filter B')"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -346,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -362,16 +371,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x27c62e98be0>"
+       "<matplotlib.image.AxesImage at 0x267fa8ac040>"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -390,6 +399,33 @@
    ],
    "source": [
     "plt.imshow(Gray, cmap='gray')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(438, 780)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Gray.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Setelah data gambar dirubah menjadi grayscale, data tidak lagi berbentuk array 3-D melaikan menjadi array 2-D (matrix) yang berupa gambar **438 x 780 pixels**."
    ]
   }
  ],
