Fix matrix operation documentation

--- a/script.ipynb
+++ b/script.ipynb
@@ -503,7 +503,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Matrix identitas berbentuk square matrix dengan ukuran 780 x 780."
+    "Matrix identitas berbentuk square matrix dengan ukuran **780 x 780**."
    ]
   },
   {
@@ -610,7 +610,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Dari gambar diatas memperlihatkan hasil perkalian matrix grayscaled dengan matrix identitas yang dikalikan dengan (-1) menghasilkan gambar yang berbeda dimana **pixel terang berubah menjadi gelap** dan **pixel gelap berubah menjadi terang**."
+    "Dari gambar di atas memperlihatkan hasil perkalian matrix grayscaled dengan matrix identitas yang dikalikan dengan (-1) menghasilkan gambar yang berbeda dari gambar sebelumnya dimana **pixel terang berubah menjadi gelap** dan **pixel gelap berubah menjadi terang**."
    ]
   },
   {
