Add documentation to partial derivative

--- a/script.ipynb
+++ b/script.ipynb
@@ -621,12 +621,35 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Pada bagian ini akan menghitung turunan parsial dari matrix grayscaled pada tiap sumbunya (x, y) dengan menggunakan rumus:\n",
+    "\n",
+    "$\\frac{\\partial I}{\\partial x},\\frac{\\partial I}{\\partial y}$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Menghitung turunan parsial menggunakan `numpy.gradient()` yang returnnya berupa 2 matrix hasil turunan parsial terhadap **sumbu x** dan **sumbu y**."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "dx, dy = np.gradient(Gray)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Melakukan plotting perhitungan turunan parsial."
    ]
   },
   {
@@ -665,6 +688,13 @@
     "ax[1].set_title('dx')\n",
     "ax[2].imshow(dy, cmap='gray')\n",
     "ax[2].set_title('dy')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Dari gambar di atas, hasil turunan parsial terhadap sumbu x menghasilkan gambar yang berefek **bevel** sedangkan hasil turunan parsial terhadap sumbu y menghasilkan gambar yang berefek **emboss**."
    ]
   },
   {
