Add documentation to gradient magnitude

--- a/script.ipynb
+++ b/script.ipynb
@@ -705,12 +705,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Setelah mendapatkan hasil dari turunan parsial selanjutnya matrix hasil turunan parsial akan digunakan untuk menghitung **Gradient Magnitude** dari tiap pixel dengan menggunakan rumus:\n",
+    "\n",
+    "$\\sqrt{(\\frac{\\partial I}{\\partial x})^{2} + (\\frac{\\partial I}{\\partial y})^{2}}$"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "magnitude = np.sqrt(dx**2 + dy**2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Menampilkan matrix hasil perhitungan gradient magnitude."
    ]
   },
   {
@@ -763,6 +779,13 @@
    ],
    "source": [
     "magnitude.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Dari hasil perhitungan gradient magnitude tersebut menghasilkan matrix baru dengan ukuran **438 x 780**."
    ]
   },
   {
