Add conclusion section (done?)

--- a/script.ipynb
+++ b/script.ipynb
@@ -888,7 +888,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Dengan menggunakan **threshold > 30** edge yang terdeteksi sudah cukup baik, tetapi masih ada beberapa bagian yang tidak terdeteksi dengan baik seperti pada bagian **kuping** dan **kaki**."
+    "Dengan menggunakan **threshold > 30** edge yang terdeteksi sudah cukup baik, tetapi masih ada beberapa bagian yang tidak terdeteksi dengan baik seperti pada bagian **kuping** dan **kaki depan**."
    ]
   },
   {
@@ -1033,6 +1033,24 @@
    "metadata": {},
    "source": [
     "Dengan menggunakan **threshold > 10** tubuh dari anjing terbentuk sangat jelas tetapi terlalu banyak pixel tidak relevant ikut terdeteksi sebagai edge."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Conclusion"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Kesimpulan yang dapat ditarik dari hasil deteksi tepi (Edge Detection) pada gambar anjing rhodesian ridgeback dengan menggunakan **4** threshold yang berbeda adalah:\n",
+    "\n",
+    "Dengan menggunakan **threshold > 10** walaupun edge dari tubuh anjing terdeteksi dengan sangat jelas tetapi banyak pixel tidak relevant yang ikut terdeteksi sebagai edge, berbanding terbalik dengan menggunakan **threshold > 40** banyak bagian tubuh yang tidak terdeteksi edgenya. Sedangkan dengan menggunakan **threshold > 30** edge bisa terdeteksi dengan cukup baik, tetapi jika dibandingkan dengan menggunakan **threshold > 20** edge pada tubuh anjing terlihat lebih jelas terutama pada bagian **kuping** dan **kaki depan**.\n",
+    "\n",
+    "Jadi, dengan menggunakan **threshold > 20** pada dataset gambar anjing rhodesian ridgeback yang digunakan edge dapat **terdeteksi lebih optimal**."
    ]
   }
  ],
