Add little touch to conclusion

--- a/script.ipynb
+++ b/script.ipynb
@@ -1050,7 +1050,7 @@
     "\n",
     "Dengan menggunakan **threshold > 10** walaupun edge dari tubuh anjing terdeteksi dengan sangat jelas tetapi banyak pixel tidak relevant yang ikut terdeteksi sebagai edge, berbanding terbalik dengan menggunakan **threshold > 40** banyak bagian tubuh yang tidak terdeteksi edgenya. Sedangkan dengan menggunakan **threshold > 30** edge bisa terdeteksi dengan cukup baik, tetapi jika dibandingkan dengan menggunakan **threshold > 20** edge pada tubuh anjing terlihat lebih jelas terutama pada bagian **kuping** dan **kaki depan**.\n",
     "\n",
-    "Jadi, dengan menggunakan **threshold > 20** pada dataset gambar anjing rhodesian ridgeback yang digunakan edge dapat **terdeteksi lebih optimal**."
+    "Jadi, dengan menggunakan **threshold > 20** pada dataset gambar anjing rhodesian ridgeback yang digunakan edge dapat **terdeteksi lebih optimal** dibanding tiga threshold lainnya."
    ]
   }
  ],
